force-app/main/default/objects/Room__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manjanna Building</fullName>
            </value>
            <value>
                <fullName>Karthik Building</fullName>
            </value>
            <value>
                <fullName>Abhiram Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>