force-app/main/default/objects/Room__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4 PPL - With Projector</fullName>
                <default>true</default>
                <label>4 PPL - With Projector</label>
            </value>
            <value>
                <fullName>4 PPL - Without Projector</fullName>
            </value>
            <value>
                <fullName>6 PPL - With Projector</fullName>
            </value>
            <value>
                <fullName>6 PPL - Without Projector</fullName>
            </value>
            <value>
                <fullName>8 PPL - With Projector</fullName>
            </value>
            <value>
                <fullName>8 PPL - Without Projector</fullName>
            </value>
            <value>
                <fullName>12 PPL - With Projector</fullName>
            </value>
            <value>
                <fullName>12 PPL - Without Projector</fullName>
            </value>
            <value>
                <fullName>16 PPL - With Projector</fullName>
            </value>
            <value>
                <fullName>16 PPL - Without Projector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>